--- a/index.html
+++ b/index.html
@@ -4,50 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>域名出售 | zmtech.top</title>
-    <meta name="description" content="域名zmtech.top出售，售价5000元">
+    <meta name="description" content="域名zmtech.top出售，售价5000元，联系邮箱tina@telide.com">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #f8f9fa;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background: #f5f7fa;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
             padding: 20px;
+            color: #333;
         }
         .card {
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+            padding: 40px;
             text-align: center;
-            max-width: 400px;
+            max-width: 480px;
             width: 100%;
         }
-        .domain {
-            font-size: 2rem;
+        h1 {
             color: #2c3e50;
+            margin-bottom: 15px;
+            font-size: 1.8rem;
+        }
+        .domain {
+            font-size: 2.2rem;
             font-weight: bold;
-            margin: 10px 0;
+            color: #4b6cb7;
+            margin: 15px 0;
+            letter-spacing: 1px;
         }
         .price {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             color: #e74c3c;
-            margin: 15px 0;
+            font-weight: bold;
+            margin: 20px 0;
         }
         .contact {
-            margin-top: 25px;
-            padding-top: 20px;
+            margin-top: 30px;
+            padding-top: 25px;
             border-top: 1px solid #eee;
         }
-        .contact-item {
-            margin: 12px 0;
-            color: #555;
-        }
-        .contact-item a {
-            color: #3498db;
+        .email-link {
+            display: inline-block;
+            background: #4b6cb7;
+            color: white;
+            padding: 12px 25px;
+            border-radius: 6px;
             text-decoration: none;
+            font-weight: 600;
+            margin-top: 15px;
+            transition: background 0.3s;
+        }
+        .email-link:hover {
+            background: #3a56a0;
+        }
+        .footer {
+            margin-top: 30px;
+            color: #7f8c8d;
+            font-size: 0.9rem;
         }
     </style>
 </head>
@@ -58,14 +77,14 @@
         <div class="price">售价：¥5000</div>
         
         <div class="contact">
-            <div class="contact-item">
-                <strong>邮箱：</strong>
-                <a href="mailto:tina@telide.com">tina@telide.com</a>
-            </div>
-            <div class="contact-item">
-                <strong>电话：</strong>
-                136-3296-4233
-            </div>
+            <p>有意购买请联系：</p>
+            <a href="mailto:tina@telide.com?subject=购买域名zmtech.top" class="email-link">
+                tina@telide.com
+            </a>
+        </div>
+        
+        <div class="footer">
+            © 2024 zmtech.top 域名出售
         </div>
     </div>
 </body>
